hphp/test/slow/inout/bad-async-generator.php.expectf

Fatal error: Parameters may not be marked inout on async %s in %s/bad-async-generator.php on line 3
